# foma-rs

./: .gitattributes  .gitignore  Cargo.toml
.config/nplan/: config.styx
.config/nspec/: config.styx
.github/workflows/: ci.yml
.nplan/: active-claim
crates/foma/: Cargo.toml
crates/foma/examples/: apply_bench.rs  build_bench.rs
crates/foma/src/: apply.rs  coaccessible.rs  constructions.rs  define.rs  determinize.rs  dynarray.rs  error.rs  extract.rs  flags.rs  iface.rs  int_stack.rs  io.rs  lexcread.rs  lib.rs  line_table.rs  mem.rs  minimize.rs  options.rs  regex.rs  reverse.rs  rewrite.rs  session.rs  sigma.rs  spelling.rs  stack.rs  stringhash.rs  structures.rs  topsort.rs  trie.rs  types.rs  utf8.rs
crates/foma/src/constructions/: boolean.rs  closure.rs  derived.rs  helpers.rs  merge_sigma.rs  mod.rs  products.rs  tests.rs  triplet_hash.rs
crates/foma/src/iface/: apply_cmds.rs  binary.rs  common.rs  io_cmds.rs  mod.rs  print.rs  stack_ops.rs  tests.rs  tests_cmds.rs  unary.rs  variables.rs
crates/foma/tests/: cli.rs  cli_slice1.rs  upstream.rs
docs/port/: rust-conventions.md
docs/spec/port/foma/: apply.md  cgflookup.md  coaccessible.md  constructions.md  define.md  determinize.md  dynarray.md  extract.md  flags.md  flookup.md  foma.md  fomalib.md  fomalibconf.md  iface.md  int_stack.md  io.md  lexc.md  lexcread.md  mem.md  minimize.md  reverse.md  rewrite.md  sigma.md  spelling.md  stack.md  stringhash.md  structures.md  topsort.md  trie.md  utf8.md
plan/: .port-manifest.styx  .quality-baseline.styx  .state.styx  main.styx
